--- a/rf-mk.7
+++ b/rf-mk.7
@@ -426,11 +426,7 @@ Linker flags.
 .It LDADD
 Per-prog additions: LDADD.<prog>
 .br
-Additional loader objects, usually libraries.
-.\" TODO: add explanation of example
-.Bd -literal -offset Ds
-LDADD += -lutil -lcompat
-.Ed
+Additional linker objects, usually libraries.
 .El
 .\"
 .\"
