fix man page regarding default value of PKG

--- a/rf-mk.7
+++ b/rf-mk.7
@@ -74,7 +74,7 @@ The following variables are available:
 .It PKGVARS
 List of variables related to the package name and version.
 You cannot change this, but it is documented for completeness.
-.It PKG [${PROG:U${LIB}}]
+.It PKG [junkpkg]
 Name of the package.
 It should theoretically be globally unique.
 .It VER [0]
