re-word configinstall target description

--- a/rf-mk.7
+++ b/rf-mk.7
@@ -197,9 +197,7 @@ You cannot install to a specific directory.
 Build the configs.
 .It configinstall
 Install the configs to ${ETCDIR}.
-Unlike most
-.Ql *all
-targets, this is not hooked into the main
+This is not hooked into the main
 .Ql all
 target.
 .It configexampleinstall
